containerd config prefix

--- a/parts/linux/cloud-init/nodecustomdata.yml
+++ b/parts/linux/cloud-init/nodecustomdata.yml
@@ -429,6 +429,7 @@ write_files:
   permissions: "0644"
   owner: root
   content: |
-    [host."https://{{GetBootstrapProfileContainerRegistryServer}}"]
+    [host."https://{{GetBootstrapProfileContainerRegistryServer}}/v2/aks"]
       capabilities = ["pull", "resolve"]
+      override_path = true
 {{- end}}
